[gd_scene load_steps=3 format=3 uid="uid://c6xaq14r46pe3"]

[ext_resource type="Script" path="res://scripts/ui/level_ui/resource_counter_h_box_container.gd" id="1_nhdwe"]
[ext_resource type="Texture2D" uid="uid://wi27y3hfm7wg" path="res://assets/ui/interface/loader.png" id="2_nhdwe"]

[node name="ResourceCounterHBoxContainer" type="HBoxContainer"]
layout_direction = 2
offset_right = 117.0
offset_bottom = 30.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 5
script = ExtResource("1_nhdwe")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_bottom = 3

[node name="ResourceIconTextureRect" type="TextureRect" parent="MarginContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("2_nhdwe")
expand_mode = 3
stretch_mode = 4

[node name="ResourceAmountLabel" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
bbcode_enabled = true
text = "[b]0[/b]"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 2

[node name="ResourceNumGatherersLabel" type="RichTextLabel" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
bbcode_enabled = true
text = "[00]"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1
